# cgal

./: CMakeLists.txt  conandata.yml
examples/: CMakeLists.txt
examples/Straight_skeleton_2/: CMakeLists.txt  Show_straight_skeleton.cpp
include/: copy.py
include/Installation/CGAL/: config.h  spycc.h
include/Installation/cmake/modules/: CGAL_SetupBoost.cmake
include/Polygon_mesh_processing/CGAL/Polygon_mesh_processing/: corefinement.h
include/Polygon_mesh_processing/CGAL/Polygon_mesh_processing/internal/Corefinement/: intersection_impl.h
include/Surface_mesh/include/CGAL/Surface_mesh/: Surface_mesh.h
install/: CMakeLists.txt
src/: CMakeLists.txt
